# sample-haskell-static

./: .gitignore  README.md  sample-haskell-static.cabal  stack.yaml
app/: Main.hs
data/: index.html
src/SampleHaskellStatic/: Server.hs
