name:                sample-haskell-static
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/framp/sample-haskell-static#readme
license:             BSD3
license-file:        LICENSE
author:              Federico Rampazzo
maintainer:          frampone@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SampleHaskellStatic.Server
  build-depends:       base >= 4.7 && < 5
                     , time
                     , warp
                     , wai
                     , wai-app-static
  default-language:    Haskell2010

executable sample-haskell-static
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sample-haskell-static
  default-language:    Haskell2010
  ld-options:          -static

test-suite sample-haskell-static-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sample-haskell-static
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/framp/sample-haskell-static
